--- a/views/templates/about.html
+++ b/views/templates/about.html
@@ -68,7 +68,7 @@
             </p>
 
             <p>
-              Lately, I've been diving into the exciting world of Unity, which has prompted me to get started with C#. I'm also learning Django in order to begin flexing my Python muscles. Python will help me continue to explore the fascinating realm of neural networks and machine learning.
+              Lately, I've been diving into the exciting world of Unity, which has prompted me to get started with C#. I'm also learning Django in order to begin flexing my Python muscles with some full-stack applications. Python will help me continue to explore the fascinating realm of neural networks and machine learning.
             </p>
 
             <p>
