--- a/views/templates/math.html
+++ b/views/templates/math.html
@@ -336,6 +336,11 @@
       <img class="bromiliad" src="styles/bromiliad2.jpg" alt="">&emsp;
       <img class="bromiliad" src="styles/bromiliad.jpg" alt="">
     </div>
+<br>
+    <div class="blogText">
+      Vihart does an excellent <a href="https://www.youtube.com/watch?v=ahXIMUkSXX0">series of videos</a> on the golden ratio and its relationship to the Fibonacci sequence.
+    </div>
+
 
 
     <hr>
