working on styling of icons

--- a/views/templates/about.html
+++ b/views/templates/about.html
@@ -88,47 +88,79 @@
         <div layout="row">
           <div layout="column" layout-align="center center" class="skills">
             <b class="skillTitle">Core Stack:</b>
-            <ul>
-              <li>JavaScript</li>
+              <!-- <li>JavaScript (ES6)</li>
               <li>Node.js</li>
               <li>Express.js</li>
               <li>AngularJS</li>
-              <li>AJAX</li>
-              <li>ES6</li>
-            </ul>
+              <li>AJAX</li> -->
+
+            <br>  <img class="skillIcon" src="styles/icons/jsicon.png">
+              <br><img class="skillIcon" src="styles/icons/node-icon.svg">
+              <br><img class="skillIcon" src="styles/icons/expressjs.png">
+              <br><img class="skillIcon" src="styles/icons/AngularJS_logo.png">
+              <br><img class="wideIcon" src="styles/icons/AJAX_logo_by_gengns.svg_.png">
+
+              <!-- <li>ES6</li> -->
           </div>
           <div layout="column" layout-align="center center" class="skills">
             <b class="skillTitle">Back-End:</b>
-            <ul>
-              <li>Python</li>
+              <!-- <li>Python</li>
               <li>PHP</li>
               <li>PostgreSQL</li>
               <li>MySQL</li>
-              <li>MongoDB</li>
-              <li>Neural Nets</li>
-            </ul>
+              <li>MongoDB</li> -->
+
+            <br>  <img class="skillIcon" title="hi" src="styles/icons/python-icon.png">
+              <br><img class="skillIcon" title="hi" src="styles/icons/php-1.png">
+              <br><img class="skillIcon" title="hi" src="styles/icons/elephant.png">
+              <br><img class="skillIcon" title="hi" src="styles/icons/mysql.png">
+              <br><img class="wideIcon" title="hi" src="styles/icons/mongodb-logo.png">
+
+
+              <!-- <li>Neural Nets</li> -->
           </div>
           <div layout="column" layout-align="center center" class="skills">
             <b class="skillTitle">Front-End:</b>
-            <ul>
-              <li>HTML5</li>
+              <!-- <li>HTML5</li>
               <li>CSS3</li>
               <li>Bootstrap</li>
-              <li>p5.js</li>
               <li>jQuery</li>
-              <li>Angular Material</li>
-            </ul>
+              <li>Angular Material</li> -->
+
+              <br><img class="skillIcon" src="styles/icons/HTML_Logo.png">
+              <br><img class="skillIcon" src="styles/icons/css.png">
+              <br><img class="skillIcon" src="styles/icons/bootstrap-logo.png">
+              <br><img class="skillIcon" src="styles/icons/jquery-icon-17841.png">
+              <br><img class="skillIcon" src="styles/icons/p5-sq-reverse-filled.png">
+
+
+              <!-- <li>p5.js</li> -->
+
           </div>
           <div layout="column" layout-align="center center" class="skills">
             <b class="skillTitle">Games, etc.:</b>
-            <ul>
-              <li>Matter.js</li>
+            <!-- <ul> -->
+              <!-- <li>Matter.js</li>
               <li>Unity (C#)</li>
               <li>Git</li>
-              <li>Unit Testing</li>
               <li>Moment.js</li>
               <li>APIs</li>
-            </ul>
+              <li>Unit-Testing</li> -->
+
+
+              <br><div class="skillIconCont" >
+                <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/unity-icon.png"></div><div class="skillTxt" layout layout-align="center center">Unity (C#)</div></div>
+              <br><div class="skillIconCont">
+                  <div layout layout-align="center center"><img class="wideIcon" src="styles/icons/matter-icon.svg"></div><div class="skillTxt" layout layout-align="center center">Matter.js</div></div>
+              <br><div class="skillIconCont" >
+                <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/git-icon.png"></div><div class="skillTxt" layout layout-align="center center">Git</div></div>
+              <br><div class="skillIconCont" >
+                <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/momentjs.png"></div><div class="skillTxt" layout layout-align="center center">Moment.js</div></div>
+              <br><div class="skillIconCont" >
+                <div layout layout-align="center center"><img class="skillIcon"     src="styles/icons/api-icon.png"></div><div class="skillTxt" layout layout-align="center center">APIs</div></div>
+
+
+            <!-- </ul> -->
           </div>
         </div>
 
