--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,43 @@
   padding-left: 80px;
 }
 
+.skillTxt {
+  margin-top: 15px;
+  /*margin-bottom: 25px;*/
+  font-family: Impact;
+  color: gold;
+  font-size: 16.5px;
+  background-color: darkblue;
+}
+
+.skillIcon {
+  height: 80px;
+  width: 80px;
+  border-radius: 6px;
+  /*padding-top: 5px;
+  padding-bottom: 5px;*/
+  /*margin-top: 15px;*/
+}
+
+.skillIconCont {
+  height: 100px;
+  width: 100px;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  margin-top: 15px;
+}
+
+.skillIconCont:hover {
+  background-color: lightblue;
+
+}
+
+.wideIcon {
+  height: 80px;
+  width: 110px;
+  border-radius: 6px;
+  margin-top: 10px;
+}
 
 
 .description {
