--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,8 @@
   <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
   <script type="text/javascript" src="vendors/angular-route/angular-route.min.js"></script>
 
+  <script src="vendors/three.min.js" charset="utf-8"></script>
+
   <script src="vendors/angular-material.min.js" charset="utf-8"></script>
   <script src="vendors/angular-animate.min.js" charset="utf-8"></script>
   <script src="vendors/angular-aria.min.js" charset="utf-8"></script>
