--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -67,6 +67,7 @@
       <!-- <div layout="row" class="brags">1/17/18</div>
       <div layout="row" class="brags">1/16/18</div>
        -->
+      <div layout="row" class="brags">1/20/18</div>
       <div layout="row" class="brags">1/15/18</div>
       <div layout="row" class="brags">1/14/18</div>
       <div layout="row" class="brags">1/13/18</div>
@@ -92,6 +93,9 @@
 
 
     -->
+    <div layout="row" class="brags2" ng-click="bc.goPost(15)">
+      The Mandelbrot Set</i>&emsp;<span class="tag tagM" ng-click="bc.goMath()">Math</span>
+    </div>
     <div layout="row" class="brags2" ng-click="bc.goPost(15)">
       Rilke's&ensp;<i>Archaic Torso of Apollo</i>&emsp;<span class="tag tagO" ng-click="bc.goOther()">Other</span>
     </div>
