--- a/views/templates/code.html
+++ b/views/templates/code.html
@@ -47,7 +47,10 @@
 
   <div class="blogContent" layout="column" flex="60">
 
+  <div layout layout-align="center center">
+    <canvas id="caridoid" width="500" height="500"></canvas>
 
+  </div>
 
     <hr>
 
