--- a/views/templates/about.html
+++ b/views/templates/about.html
@@ -94,11 +94,23 @@
               <li>AngularJS</li>
               <li>AJAX</li> -->
 
-            <br>  <img class="skillIcon" src="styles/icons/jsicon.png">
+              <br><div class="skillIconCont" >
+                <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/jsicon.png"></div><div class="skillTxt" layout layout-align="center center">JavaScript</div></div>
+              <br><div class="skillIconCont">
+                  <div layout layout-align="center center"><img class="wideIcon" src="styles/icons/node-icon.svg"></div><div class="skillTxt" layout layout-align="center center">Node.js</div></div>
+              <br><div class="skillIconCont" >
+                <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/expressjs.png"></div><div class="skillTxt" layout layout-align="center center">Express.js</div></div>
+              <br><div class="skillIconCont" >
+                <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/AngluarJS_logo.png"></div><div class="skillTxt" layout layout-align="center center">AngluarJS</div></div>
+              <br><div class="skillIconCont" >
+                <div layout layout-align="center center"><img class="skillIcon"     src="styles/icons/AJAX_logo_by_gengns.svg_.png"></div><div class="skillTxt" layout layout-align="center center">AJAX</div></div>
+
+
+            <!-- <br>  <img class="skillIcon" src="styles/icons/jsicon.png">
               <br><img class="skillIcon" src="styles/icons/node-icon.svg">
               <br><img class="skillIcon" src="styles/icons/expressjs.png">
               <br><img class="skillIcon" src="styles/icons/AngularJS_logo.png">
-              <br><img class="wideIcon" src="styles/icons/AJAX_logo_by_gengns.svg_.png">
+              <br><img class="wideIcon" src="styles/icons/AJAX_logo_by_gengns.svg_.png"> -->
 
               <!-- <li>ES6</li> -->
           </div>
@@ -110,11 +122,24 @@
               <li>MySQL</li>
               <li>MongoDB</li> -->
 
+              <br><div class="skillIconCont" >
+                <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/python-icon.png"></div><div class="skillTxt" layout layout-align="center center">Python</div></div>
+              <br><div class="skillIconCont">
+                  <div layout layout-align="center center"><img class="wideIcon" src="styles/icons/php-1.png"></div><div class="skillTxt" layout layout-align="center center">PHP</div></div>
+              <br><div class="skillIconCont" >
+                <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/elephant.png"></div><div class="skillTxt" layout layout-align="center center">PostgreSQL</div></div>
+              <br><div class="skillIconCont" >
+                <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/mysql.png"></div><div class="skillTxt" layout layout-align="center center">MySQL</div></div>
+              <br><div class="skillIconCont" >
+                <div layout layout-align="center center"><img class="skillIcon"     src="styles/icons/mongod-logo.png"></div><div class="skillTxt" layout layout-align="center center">MongoDB</div></div>
+
+
+<!--
             <br>  <img class="skillIcon" title="hi" src="styles/icons/python-icon.png">
               <br><img class="skillIcon" title="hi" src="styles/icons/php-1.png">
               <br><img class="skillIcon" title="hi" src="styles/icons/elephant.png">
               <br><img class="skillIcon" title="hi" src="styles/icons/mysql.png">
-              <br><img class="wideIcon" title="hi" src="styles/icons/mongodb-logo.png">
+              <br><img class="wideIcon" title="hi" src="styles/icons/mongodb-logo.png"> -->
 
 
               <!-- <li>Neural Nets</li> -->
@@ -127,11 +152,23 @@
               <li>jQuery</li>
               <li>Angular Material</li> -->
 
-              <br><img class="skillIcon" src="styles/icons/HTML_Logo.png">
+
+              <br><div class="skillIconCont" >
+                <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/HTML_Logo.png"></div><div class="skillTxt" layout layout-align="center center">HTML 5</div></div>
+              <br><div class="skillIconCont">
+                  <div layout layout-align="center center"><img class="wideIcon" src="styles/icons/css.png"></div><div class="skillTxt" layout layout-align="center center">CSS 3</div></div>
+              <br><div class="skillIconCont" >
+                <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/bootstrap-logo.png"></div><div class="skillTxt" layout layout-align="center center">Bootstrap</div></div>
+              <br><div class="skillIconCont" >
+                <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/jquery-icon-17841.png"></div><div class="skillTxt" layout layout-align="center center">jQuery</div></div>
+              <br><div class="skillIconCont" >
+                <div layout layout-align="center center"><img class="skillIcon"     src="styles/icons/p5-sq-reverse-filled.png"></div><div class="skillTxt" layout layout-align="center center">p5.js</div></div>
+
+              <!-- <br><img class="skillIcon" src="styles/icons/HTML_Logo.png">
               <br><img class="skillIcon" src="styles/icons/css.png">
               <br><img class="skillIcon" src="styles/icons/bootstrap-logo.png">
               <br><img class="skillIcon" src="styles/icons/jquery-icon-17841.png">
-              <br><img class="skillIcon" src="styles/icons/p5-sq-reverse-filled.png">
+              <br><img class="skillIcon" src="styles/icons/p5-sq-reverse-filled.png"> -->
 
 
               <!-- <li>p5.js</li> -->
@@ -170,7 +207,7 @@
       <div layout="column" flex="30" id="picSide">
         <div class="myPicContainer" layout layout-align="center center">
           <!-- <div layout="row"> -->
-          <img class="myPic" src="styles/face2.png">
+          <img class="myPic" src="styles/zs_profile_copy.jpg">
         </div>
 
         <div layout="column" layout layout-align="center center" class="textCont">
