finally ready to push a new change: picture, revert icons, add new mandelbrot and cardioid posts

--- a/views/templates/about.html
+++ b/views/templates/about.html
@@ -68,7 +68,7 @@
             </p>
 
             <p>
-              Lately, I've been diving into the exciting world of Unity, which has prompted me to get started with C#. I'm also learning Django in order to begin flexing my Python muscles with some full-stack applications. Python will help me continue to explore the fascinating realm of neural networks and machine learning.
+              Lately, I've been diving into the exciting world of Unity, which has prompted me to get started with C#. I'm also learning Django in order to begin flexing my Python muscles with some full-stack applications. Python will help me continue to explore the fascinating realm of machine learning. Recently I've been getting into neural networks and the genetic algorithm.
             </p>
 
             <p>
@@ -88,13 +88,16 @@
         <div layout="row">
           <div layout="column" layout-align="center center" class="skills">
             <b class="skillTitle">Core Stack:</b>
-              <!-- <li>JavaScript (ES6)</li>
+            <ul>
+              <li>JavaScript (ES6)</li>
               <li>Node.js</li>
               <li>Express.js</li>
               <li>AngularJS</li>
-              <li>AJAX</li> -->
+              <li>AJAX</li>
+            </ul>
 
-              <br><div class="skillIconCont" >
+
+              <!-- <br><div class="skillIconCont" >
                 <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/jsicon.png"></div><div class="skillTxt" layout layout-align="center center">JavaScript</div></div>
               <br><div class="skillIconCont">
                   <div layout layout-align="center center"><img class="wideIcon" src="styles/icons/node-icon.svg"></div><div class="skillTxt" layout layout-align="center center">Node.js</div></div>
@@ -103,7 +106,7 @@
               <br><div class="skillIconCont" >
                 <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/AngluarJS_logo.png"></div><div class="skillTxt" layout layout-align="center center">AngluarJS</div></div>
               <br><div class="skillIconCont" >
-                <div layout layout-align="center center"><img class="skillIcon"     src="styles/icons/AJAX_logo_by_gengns.svg_.png"></div><div class="skillTxt" layout layout-align="center center">AJAX</div></div>
+                <div layout layout-align="center center"><img class="skillIcon"     src="styles/icons/AJAX_logo_by_gengns.svg_.png"></div><div class="skillTxt" layout layout-align="center center">AJAX</div></div> -->
 
 
             <!-- <br>  <img class="skillIcon" src="styles/icons/jsicon.png">
@@ -116,13 +119,16 @@
           </div>
           <div layout="column" layout-align="center center" class="skills">
             <b class="skillTitle">Back-End:</b>
-              <!-- <li>Python</li>
+            <ul>
+              <li>Python</li>
               <li>PHP</li>
               <li>PostgreSQL</li>
               <li>MySQL</li>
-              <li>MongoDB</li> -->
+              <li>MongoDB</li>
+            </ul>
 
-              <br><div class="skillIconCont" >
+
+              <!-- <br><div class="skillIconCont" >
                 <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/python-icon.png"></div><div class="skillTxt" layout layout-align="center center">Python</div></div>
               <br><div class="skillIconCont">
                   <div layout layout-align="center center"><img class="wideIcon" src="styles/icons/php-1.png"></div><div class="skillTxt" layout layout-align="center center">PHP</div></div>
@@ -131,7 +137,7 @@
               <br><div class="skillIconCont" >
                 <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/mysql.png"></div><div class="skillTxt" layout layout-align="center center">MySQL</div></div>
               <br><div class="skillIconCont" >
-                <div layout layout-align="center center"><img class="skillIcon"     src="styles/icons/mongod-logo.png"></div><div class="skillTxt" layout layout-align="center center">MongoDB</div></div>
+                <div layout layout-align="center center"><img class="skillIcon"     src="styles/icons/mongod-logo.png"></div><div class="skillTxt" layout layout-align="center center">MongoDB</div></div> -->
 
 
 <!--
@@ -146,14 +152,17 @@
           </div>
           <div layout="column" layout-align="center center" class="skills">
             <b class="skillTitle">Front-End:</b>
-              <!-- <li>HTML5</li>
+            <ul>
+              <li>HTML5</li>
               <li>CSS3</li>
               <li>Bootstrap</li>
               <li>jQuery</li>
-              <li>Angular Material</li> -->
+              <li>Angular Material</li>
+            </ul>
 
 
-              <br><div class="skillIconCont" >
+
+              <!-- <br><div class="skillIconCont" >
                 <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/HTML_Logo.png"></div><div class="skillTxt" layout layout-align="center center">HTML 5</div></div>
               <br><div class="skillIconCont">
                   <div layout layout-align="center center"><img class="wideIcon" src="styles/icons/css.png"></div><div class="skillTxt" layout layout-align="center center">CSS 3</div></div>
@@ -162,7 +171,7 @@
               <br><div class="skillIconCont" >
                 <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/jquery-icon-17841.png"></div><div class="skillTxt" layout layout-align="center center">jQuery</div></div>
               <br><div class="skillIconCont" >
-                <div layout layout-align="center center"><img class="skillIcon"     src="styles/icons/p5-sq-reverse-filled.png"></div><div class="skillTxt" layout layout-align="center center">p5.js</div></div>
+                <div layout layout-align="center center"><img class="skillIcon"     src="styles/icons/p5-sq-reverse-filled.png"></div><div class="skillTxt" layout layout-align="center center">p5.js</div></div> -->
 
               <!-- <br><img class="skillIcon" src="styles/icons/HTML_Logo.png">
               <br><img class="skillIcon" src="styles/icons/css.png">
@@ -177,15 +186,18 @@
           <div layout="column" layout-align="center center" class="skills">
             <b class="skillTitle">Games, etc.:</b>
             <!-- <ul> -->
-              <!-- <li>Matter.js</li>
+            <ul>
+              <li>Matter.js</li>
               <li>Unity (C#)</li>
+              <li>p5.js</li>
               <li>Git</li>
-              <li>Moment.js</li>
               <li>APIs</li>
-              <li>Unit-Testing</li> -->
+            </ul>
+
+              <!-- <li>Unit-Testing</li> -->
 
 
-              <br><div class="skillIconCont" >
+              <!-- <br><div class="skillIconCont" >
                 <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/unity-icon.png"></div><div class="skillTxt" layout layout-align="center center">Unity (C#)</div></div>
               <br><div class="skillIconCont">
                   <div layout layout-align="center center"><img class="wideIcon" src="styles/icons/matter-icon.svg"></div><div class="skillTxt" layout layout-align="center center">Matter.js</div></div>
@@ -194,7 +206,7 @@
               <br><div class="skillIconCont" >
                 <div layout layout-align="center center"><img class="skillIcon" src="styles/icons/momentjs.png"></div><div class="skillTxt" layout layout-align="center center">Moment.js</div></div>
               <br><div class="skillIconCont" >
-                <div layout layout-align="center center"><img class="skillIcon"     src="styles/icons/api-icon.png"></div><div class="skillTxt" layout layout-align="center center">APIs</div></div>
+                <div layout layout-align="center center"><img class="skillIcon"     src="styles/icons/api-icon.png"></div><div class="skillTxt" layout layout-align="center center">APIs</div></div> -->
 
 
             <!-- </ul> -->
