--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -64,9 +64,9 @@
   </div>
   <div layout="row" class="blogText dates">
     <div layout="column" id="datesList" >
-      <!-- <div layout="row" class="brags">1/17/18</div>
-      <div layout="row" class="brags">1/16/18</div>
-       -->
+      <!-- <div layout="row" class="brags">1/28/18</div> -->
+      <div layout="row" class="brags">1/27/18</div>
+
       <div layout="row" class="brags">1/20/18</div>
       <div layout="row" class="brags">1/15/18</div>
       <div layout="row" class="brags">1/14/18</div>
@@ -93,6 +93,12 @@
 
 
     -->
+    <!-- <div layout="row" class="brags2" ng-click="bc.goPost(15)">
+      Getting Started with Django</i>&emsp;<span class="tag tagC" ng-click="bc.goCode()">Code</span>
+    </div> -->
+    <div layout="row" class="brags2" ng-click="bc.goPost(15)">
+      Cardioid Animation</i>&emsp;<span class="tag tagM" ng-click="bc.goMath()">Math</span>
+    </div>
     <div layout="row" class="brags2" ng-click="bc.goPost(15)">
       The Mandelbrot Set</i>&emsp;<span class="tag tagM" ng-click="bc.goMath()">Math</span>
     </div>
