--- a/views/templates/code.html
+++ b/views/templates/code.html
@@ -47,10 +47,40 @@
 
   <div class="blogContent" layout="column" flex="60">
 
-  <div layout layout-align="center center">
-    <canvas id="caridoid" width="500" height="500"></canvas>
+  <!-- <div layout layout-align="center center">
+    <canvas id="cardioid" width="500" height="500"></canvas>
+  </div> -->
 
+
+
+
+
+  <!-- <hr>
+
+  <div layout="column" layout-align="center center" id="post11">
+    <div >
+      <h2 class="blogTitle">Getting Started with Django</h2>
+    </div>
+    <div class="blogSubtitle">
+      Jan. 28, 2018
+    </div>
   </div>
+
+  <div class="blogText">
+    Django is a front-end framework built on top of Python. I became interested in it because I wanted to visualize and interact with my Python-analyzed data. This was before I learned about Matplotlib and Pandas.
+  </div>
+
+  <div class="blogText">
+    Anyway, it takes a bit of work to set up, but Django is well worth the effort. It offers a lot of nice features &mdash; admin functionality, charts, and a way to easily interact with your database.
+  </div>
+
+  <div class="blogText">
+    Let's walk through the steps for setting up a Django project. If you don't have Python3, you should <a href="https://www.ics.uci.edu/~pattis/common/handouts/pythoneclipsejava/python.html">install</a> it. It should come with <span class="codeBit">pip3</span>, which will allow you to install packages for your projects (much like <span class="codeBit">npm</span>).
+  </div> -->
+
+
+
+
 
     <hr>
 
