--- a/views/templates/math.html
+++ b/views/templates/math.html
@@ -39,9 +39,66 @@
 
 
 
-    <div layout layout-align="center center">
+    <!-- <div layout layout-align="center center">
       <canvas id="mandelbrot" width="800" height="800"></canvas>
+    </div> -->
+
+
+    <hr>
+
+    <div layout="column" layout-align="center center" id="post11">
+      <div >
+        <h2 class="blogTitle">Cardioid Animation</h2>
+      </div>
+      <div class="blogSubtitle">
+        Jan. 27, 2018
+      </div>
     </div>
+
+    <div class="blogText">
+      It turns out that the cardioid (heart-shape) that appears at the center of the Mandelbrot set also turns up throughout mathematics.
+    </div>
+
+    <div class="blogText">
+      It so happens that the cardioid appears in the Mandelbrot set because of the <i>2</i> that shows up in the iterated function: <span class="codeBit">f(z) = z<sup>2</sup> + c</span>. If we were to crank it up to <span class="codeBit">f(z) = z<sup>3</sup> + c</span>, we would see a nephroid: a kind of double-petaled cardioid. As we increase the power, <i>n</i>, to which <i>z</i> is taken, we increase the number of petals (to <i>n - 1</i>).
+    </div>
+
+    <div class="blogText">
+      A rather fantastic way of illustrating this fact is by considering the multiplication table for <i>n</i>. We wrap the table around in a circle, and apply the <span class="codeBit">modulus</span> function to keep things going.
+    </div>
+
+    <div class="blogText">
+      Our 'circle' is composed of <i>x</i> dots, so we want to use <span class="codeBit">% x</span> to keep cycling. We get a nice picture if we choose <span class="codeBit">x = 200</span>.
+    </div>
+
+    <div class="blogText">
+      Suppose <i>n</i> is 3, so that we're considering the 3-times table. We walk through our 'circle', at each point multiplying by three and drawing a line to that new dot. So if we're standing at dot number 6, we'll draw a line to dot number 18 (modulo whatever our <i>x</i> is). Stepping forward from <i>n = 1</i> looks like this:
+    </div>
+
+
+    <div layout layout-align="center center">
+      <canvas id="cardioid" width="600" height="600"></canvas>
+      <div layout="row">
+        <button ng-click="mc.startCard()">Start</button>
+        <button ng-click="mc.stopCard()">Pause</button>
+
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+    <div class="blogText">
+      You can find my full source code <a href="https://github.com/zackstout/Animations/blob/master/scripts/cardioid.js">here</a>.
+    </div>
+
+
+
+
 
 
 
@@ -57,7 +114,7 @@
     </div>
 
     <div class="blogText">
-      Lately I've been growing more and more fascinated by complicated systems or patterns that emerge out of very simple rules. Conway's <a href="#">Game of Life</a> and the Sierpinski triangle are a few examples.
+      Lately I've been growing more and more fascinated by complicated systems or patterns that emerge out of very simple rules. Conway's <a href="https://github.com/zackstout/Game-Of-Life">Game of Life</a> and the Sierpinski triangle are a few examples.
     </div>
 
     <div class="blogText">
@@ -101,6 +158,36 @@
     <div class="blogText">
       For a wonderful visual effect, we can choose what color to use for that pixel based on how long it takes our algorithm to determine whether the point belongs to the Mandelbrot set. Unsurprisingly, the brightest points &mdash; the ones for which it takes longest to determine membership &mdash; lie close to the set's border.
     </div>
+
+    <div layout layout-align="center center">
+      <img src="styles/mandel/mandlebrot.png" alt="">
+    </div>
+
+    <div class="blogText">
+      If we zoom in on a piece of our set, we can see that it repeats its structure all the way down:
+    </div>
+
+    <div layout layout-align="center center">
+      <img src="styles/mandel/zoom.png" alt="">
+    </div>
+
+    <div class="blogText">
+      By playing around with the numbers, one can find some intriguing patterns:
+    </div>
+
+    <div layout layout-align="center center">
+      <img src="styles/mandel/julia.png" alt="">
+    </div>
+
+    <div class="blogText">
+      You can find my full source code <a href="https://github.com/zackstout/Animations/blob/master/scripts/mandelbrot.js">here</a>.
+    </div>
+
+
+
+
+
+
 
 
     <hr>
@@ -518,6 +605,8 @@
   <div class="prevPosts" layout="column" flex="12">
     <div class="allposts" layout layout-align="center center">Math Posts:</div>
     <ul class="postlist">
+      <li ng-click="mc.goToPost(11)">Cardioid Animation</li>
+
       <li ng-click="mc.goToPost(10)">The Mandelbrot Set</li>
       <li ng-click="mc.goToPost(9)">Drawing the Sierpinski Triangle</li>
       <li ng-click="mc.goToPost(8)">Binary Counting and the Towers of Hanoi</li>
