added citation to cardioid animation

--- a/views/templates/code.html
+++ b/views/templates/code.html
@@ -78,10 +78,11 @@
     Let's walk through the steps for setting up a Django project. If you don't have Python3, you should <a href="https://www.ics.uci.edu/~pattis/common/handouts/pythoneclipsejava/python.html">install</a> it. It should come with <span class="codeBit">pip3</span>, which will allow you to install packages for your projects (much like <span class="codeBit">npm</span>).
   </div> -->
 
-  <!-- Note: credit sentdex as well as that other guy's excellent vid.
+  <!-- Note: credit sentdex as well as that other guy's (Traversy Media) excellent vid.
 
   Zacks-MacBook-Air:more-django zackstout$ python3 -m venv env
 Zacks-MacBook-Air:more-django zackstout$ source env/bin/activate
+TO DEACTIVATE: (env) Zacks-MacBook-Air:gogo zackstout$ deactivate
 (env) Zacks-MacBook-Air:more-django zackstout$ pip3 install django
 (env) Zacks-MacBook-Air:more-django zackstout$ django-admin startproject gogo
 ^ creates the directory for you
@@ -118,10 +119,7 @@ Now visit localhost:8000/goapp.
 
 Add url(r'^$', include('goapp.urls')), to base URLS file to make home go here.
 
-WOW there's a lot here. This is the set up. Can do a second post on the features you get for going through this convoluted process. -->
-
-
-
+WOW there's a lot here. This is the set up. Can do a second post on the features you get for going through this convoluted process. Just list benefits: Front-end for Python, a nice templating system, (although you have notebooks and just the shell, and IDLE, and matplotlib, and all that), Database management, Admin stuff out of the box, that hot-module thing Connor was into. And just a ton of addons/plugins whatever that make working with Python that much more fun and efficient.-->
 
 
     <hr>
