--- a/views/templates/math.html
+++ b/views/templates/math.html
@@ -88,7 +88,7 @@
 
 
     <div class="blogText">
-      You can find my full source code <a href="https://github.com/zackstout/Cardioid-animation">here</a>.
+      You can find my full source code <a href="https://github.com/zackstout/Cardioid-animation">here</a> Thanks to <a href="http://www.youtube.com/watch?v=qhbuKbxJsk8">Mathologer</a> for providing the inspiration for this animation.
     </div>
 
 
