pruning about-me

--- a/views/templates/about.html
+++ b/views/templates/about.html
@@ -61,14 +61,14 @@
         <div layout="row">
           <div class="description">
             <p>
-              I'm a software development student at Prime Digital Academy, and I'm discovering to my delight that my background in mathematics and philosophy has poised me to fall in love with computer programming. I've always prized clarity of thought and expression, and I am thrilled to be marrying that passion with the making of real things.
+              I'm a recent graduate of Prime Digital Academy, and I'm discovering to my delight that my background in mathematics and philosophy has poised me to fall in love with computer programming. I've always prized clarity of thought and expression, and I am thrilled to be marrying that passion with the making of real things.
             </p>
             <p>
-              My main philosophical interests lie near the issues of freedom and causality. I also love Greek tragedy, poetry (Wallace Stevens especially), and learning new words (recently, <i>apostatize</i>).
+              My main philosophical interests lie near the issues of freedom and causality. I also love Greek tragedy, poetry (Wallace Stevens especially), and learning new words (recently, <i>patina</i>).
             </p>
 
             <p>
-              Lately, I've been diving into the exciting world of Unity, which has prompted me to get started with C#. I'm also learning Django in order to begin flexing my Python muscles with some full-stack applications. Python will help me continue to explore the fascinating realm of machine learning. Recently I've been getting into neural networks and the genetic algorithm.
+              Lately, I've been diving into the exciting world of machine learning. I find neural networks and the genetic algorithm especially fascinating. To facilitate this process, I'm learning Python and Django.
             </p>
 
             <p>
