awesome, it turns out we can easily stitch in the animations to our portfolio section

--- a/views/templates/portfolio.html
+++ b/views/templates/portfolio.html
@@ -26,6 +26,56 @@
 </div>
 
 
+
+<span class="PortHeader">Group Project</span>
+
+<div layout="column">
+
+
+<div class="projContainer" layout="row">
+  <div class="imageContainer">
+    <a class="linkText" href="https://github.com/footprint-project/Footprint">
+
+    <img class="preview" src="styles/fpFront.png" alt="">
+  </a>
+  </div>
+  <div class="projectInfoContainer">
+
+  <div class="containerContainer">
+    <p class="projName">
+      Animations
+    </p>
+
+
+    <ul>
+      <li><a href="views/animations/cardioid.html">Cardioid (Multiplication Tables)</a></li>
+      <li>Create, edit and delete projects as well as monthly reports for those projects. </li>
+      <li>Visualize your data across all your projects over time, or in customizable ways &mdash; choosing your category and then your dividing variable.</li>
+    </ul>
+
+    <div  class="iconContainer">
+      <p>
+        <a class="linkText" href="https://github.com/footprint-project/Footprint">
+          <img class="icon2" src="styles/github_icon.svg">GitHub Repository</a>
+        </p>
+        <p>
+          <a class="linkText" href="https://polar-spire-15237.herokuapp.com/">
+          <img class="icon2" src="styles/heroku_icon.png" alt="">Live Demo</a>
+        </p>
+    </div>
+
+
+  </div>
+
+
+
+  </div>
+</div>
+</div>
+
+
+
+
 <span class="PortHeader">Group Project</span>
 
 <div layout="column">
