nice, everything added it all right

--- a/views/templates/portfolio.html
+++ b/views/templates/portfolio.html
@@ -46,11 +46,14 @@
       Animations
     </p>
 
-
     <ul>
       <li><a href="views/animations/cardioid.html">Cardioid (Multiplication Tables)</a></li>
-      <li>Create, edit and delete projects as well as monthly reports for those projects. </li>
-      <li>Visualize your data across all your projects over time, or in customizable ways &mdash; choosing your category and then your dividing variable.</li>
+      <li><a href="views/animations/phi.html">Golden Ratio: Phyllotaxis</a></li>
+      <li><a href="views/animations/cellular.html">Cellular Automata</a></li>
+      <li><a href="views/animations/mandelbrot.html">Mandelbrot Set</a></li>
+      <li><a href="views/animations/sierpinski.html">Sierpinski Triangle</a></li>
+      <li><a href="views/animations/pong.html">Pong</a></li>
+
     </ul>
 
     <div  class="iconContainer">
