--- a/views/templates/portfolio.html
+++ b/views/templates/portfolio.html
@@ -27,24 +27,24 @@
 
 
 
-<span class="PortHeader">Group Project</span>
+<span class="PortHeader">Animations</span>
 
 <div layout="column">
 
 
 <div class="projContainer" layout="row">
-  <div class="imageContainer">
-    <a class="linkText" href="https://github.com/footprint-project/Footprint">
+  <div class="imageContainer2">
+    <a class="linkText" href="https://github.com/zackstout/Animations">
 
-    <img class="preview" src="styles/fpFront.png" alt="">
+    <img class="preview2" src="styles/julia_set.png" alt="">
   </a>
   </div>
   <div class="projectInfoContainer">
 
-  <div class="containerContainer">
-    <p class="projName">
-      Animations
-    </p>
+  <div class="containerContainer2">
+    <!-- <p class="projName">
+      Things I've Built:
+    </p> -->
 
     <ul>
       <li><a href="views/animations/cardioid.html">Cardioid (Multiplication Tables)</a></li>
@@ -58,13 +58,13 @@
 
     <div  class="iconContainer">
       <p>
-        <a class="linkText" href="https://github.com/footprint-project/Footprint">
+        <a class="linkText" href="https://github.com/zackstout/Animations">
           <img class="icon2" src="styles/github_icon.svg">GitHub Repository</a>
         </p>
-        <p>
+        <!-- <p>
           <a class="linkText" href="https://polar-spire-15237.herokuapp.com/">
           <img class="icon2" src="styles/heroku_icon.png" alt="">Live Demo</a>
-        </p>
+        </p> -->
     </div>
 
 
