getting rid of misleading 'go back' buttons

--- a/views/animations/mandelbrot.html
+++ b/views/animations/mandelbrot.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Mandelbrot</h1>
     <div>
-      <p><a href="../index.html">Go Back</a></p>
+      <!-- <p><a href="../index.html">Go Back</a></p> -->
     </div>
 
     <canvas id="mandelbrot" width="900" height="900"></canvas>
