--- a/views/animations/phi.html
+++ b/views/animations/phi.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Golden Ratio</h1>
-    <p><a href="index.html">Go Back</a></p>
+    <!-- <p><a href="index.html">Go Back</a></p> -->
     <br>
     <p>Each leaf grows at an angle known as the Golden Angle (2&Pi;/&Phi; radians) from the previous leaf.</p>
     <canvas id="can" width="800" height="800"></canvas>
