--- a/views/animations/pong.html
+++ b/views/animations/pong.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Let's play .... PONG!</h1>
     <div>
-      <p><a href="../index.html">Go Back</a></p>
+      <!-- <p><a href="../index.html">Go Back</a></p> -->
     </div>
     <br>
   </body>
