--- a/views/animations/sierpinski.html
+++ b/views/animations/sierpinski.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Sierpinski Triangle</h1>
-    <p><a href="../index.html">Go Back</a></p>
+    <!-- <p><a href="../index.html">Go Back</a></p> -->
     <br>
 
     <div class="teaser">
