--- a/views/animations/cardioid.html
+++ b/views/animations/cardioid.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Cardioid</h1>
-    <p><a href="../index.html">Go Back</a></p>
+    <!-- <p><a href="http://zstout.com/#/portfolio">Go Back</a></p> -->
     <br>
     <div class="numHolder">
       Current multiplication table displayed (modulo 200): <span class="num">1</span>-times table.
